--- a/content/post/dev_201807151843.md
+++ b/content/post/dev_201807151843.md
@@ -31,22 +31,24 @@ or other conditions. The main features are:
 
 Let's start registering a couple of URL paths and handlers:
 
-	func main() {
-		r := mux.NewRouter()
-		r.HandleFunc("/", HomeHandler)
-		r.HandleFunc("/products", ProductsHandler)
-		r.HandleFunc("/articles", ArticlesHandler)
-		http.Handle("/", r)
-    log.Fatal(http.ListenAndServe(":12345", nil))
-	}
+```
+func main() {
+  r := mux.NewRouter()
+  r.HandleFunc("/", HomeHandler)
+  r.HandleFunc("/products", ProductsHandler)
+  r.HandleFunc("/articles", ArticlesHandler)
+  http.Handle("/", r)
+  log.Fatal(http.ListenAndServe(":12345", nil))
+}
+```
 <!--more-->
 Here we register three routes mapping URL paths to handlers. This is
-equivalent to how http.HandleFunc() works: if an incoming request URL matches
+equivalent to how `http.HandleFunc()` works: if an incoming request URL matches
 one of the paths, the corresponding handler is called passing
-(http.ResponseWriter, *http.Request) as parameters.
+`(http.ResponseWriter, *http.Request)` as parameters.
 
-Paths can have variables. They are defined using the format {name} or
-{name:pattern}. If a regular expression pattern is not defined, the matched
+Paths can have variables. They are defined using the format `{name}` or
+`{name:pattern}`. If a regular expression pattern is not defined, the matched
 variable will be anything until the next slash. For example:
 
 	r := mux.NewRouter()
@@ -54,7 +56,7 @@ variable will be anything until the next slash. For example:
 	r.HandleFunc("/articles/{category}/", ArticlesCategoryHandler)
 	r.HandleFunc("/articles/{category}/{id:[0-9]+}", ArticleHandler)
 
-Groups can be used inside patterns, as long as they are non-capturing (?:re). For example:
+Groups can be used inside patterns, as long as they are non-capturing `(?:re)`. For example:
 
 	r.HandleFunc("/articles/{category}/{sort:(?:asc|desc|new)}", ArticlesCategoryHandler)
 
@@ -65,8 +67,8 @@ calling mux.Vars():
 	category := vars["category"]
 
 Note that if any capturing groups are present, mux will panic() during parsing. To prevent
-this, convert any capturing groups to non-capturing, e.g. change "/{sort:(asc|desc)}" to
-"/{sort:(?:asc|desc)}". This is a change from prior versions which behaved unpredictably
+this, convert any capturing groups to non-capturing, e.g. change` "/{sort:(asc|desc)}"` to
+`"/{sort:(?:asc|desc)}"`. This is a change from prior versions which behaved unpredictably
 when capturing groups were present.
 
 And this is all you need to know about the basic usage. More advanced options
@@ -116,10 +118,10 @@ There are several other matchers that can be added. To match path prefixes:
 
 Setting the same matching conditions again and again can be boring, so we have
 a way to group several routes that share the same requirements.
-We call it "subrouting".
+We call it `subrouting`.
 
 For example, let's say we have several URLs that should only match when the
-host is "www.example.com". Create a route for that host and get a "subrouter"
+host is `www.example.com`. Create a route for that host and get a `subrouter`
 from it:
 
 	r := mux.NewRouter()
@@ -132,11 +134,11 @@ Then register routes in the subrouter:
 	s.HandleFunc("/articles/{category}/{id:[0-9]+}"), ArticleHandler)
 
 The three URL paths we registered above will only be tested if the domain is
-"www.example.com", because the subrouter is tested first. This is not
+`www.example.com`, because the subrouter is tested first. This is not
 only convenient, but also optimizes request matching. You can create
 subrouters combining any attribute matchers accepted by a route.
 
-Subrouters can be used to create domain or path "namespaces": you define
+Subrouters can be used to create domain or path `namespaces`: you define
 subrouters in a central place and then parts of the app can register its
 paths relatively to a given subrouter.
 
@@ -152,9 +154,9 @@ the inner routes use it as base for their paths:
 	// "/products/{key}/details"
 	s.HandleFunc("/{key}/details", ProductDetailsHandler)
 
-Note that the path provided to PathPrefix() represents a "wildcard": calling
-PathPrefix("/static/").Handler(...) means that the handler will be passed any
-request that matches "/static/*". This makes it easy to serve static files with mux:
+Note that the path provided to `PathPrefix()` represents a "wildcard": calling
+`PathPrefix("/static/").Handler(...) `means that the handler will be passed any
+request that matches` "/static/*"`. This makes it easy to serve static files with mux:
 
 	func main() {
 		var dir string
@@ -180,14 +182,14 @@ request that matches "/static/*". This makes it easy to serve static files with 
 Now let's see how to build registered URLs.
 
 Routes can be named. All routes that define a name can have their URLs built,
-or "reversed". We define a name calling Name() on a route. For example:
+or "reversed". We define a name calling `Name()` on a route. For example:
 
 	r := mux.NewRouter()
 	r.HandleFunc("/articles/{category}/{id:[0-9]+}", ArticleHandler).
 	  Name("article")
 
-To build a URL, get the route and call the URL() method, passing a sequence of
-key/value pairs for the route variables. For the previous route, we would do:
+To build a URL, get the route and call the `URL()` method, passing a sequence of
+`key/value` pairs for the route variables. For the previous route, we would do:
 
 	url, err := r.Get("article").URL("category", "technology", "id", "42")
 
